--- a/package.json
+++ b/package.json
@@ -11,15 +11,18 @@
     "@mui/icons-material": "^5.5.1",
     "@mui/material": "^5.5.2",
     "@mui/styled-engine-sc": "^5.5.2",
+    "@mui/styles": "^5.5.1",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "animejs": "^3.2.1",
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
+    "classnames": "^2.3.1",
     "clsx": "^1.1.1",
     "formik": "^2.2.9",
     "moment": "^2.29.1",
+    "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.1",
     "react-dom": "^17.0.2",
