--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "clsx": "^1.1.1",
     "formik": "^2.2.9",
     "moment": "^2.29.1",
+    "netlify": "^11.0.1",
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.1",
