--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "bootstrap": "^5.1.3",
     "classnames": "^2.3.1",
     "clsx": "^1.1.1",
+    "font-awesome": "^4.7.0",
     "formik": "^2.2.9",
     "moment": "^2.29.1",
     "netlify": "^11.0.1",
