--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "animejs": "^3.2.1",
+    "aos": "^2.3.4",
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
     "classnames": "^2.3.1",
