--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bootstrap": "^5.1.3",
     "classnames": "^2.3.1",
     "clsx": "^1.1.1",
+    "firebase": "^9.6.11",
     "font-awesome": "^4.7.0",
     "formik": "^2.2.9",
     "moment": "^2.29.1",
